# distribuild

./: .gitignore  CMakeLists.txt  README.md
distribuild/: CMakeLists.txt
distribuild/cache/: bloom_filter.h  cache.h  cache_engine.h  cache_interface.h  cache_service_impl.cpp  cache_service_impl.h  disk_cache.h  redis_cache_engine.h
distribuild/client/: CMakeLists.txt  client.cpp
distribuild/client/common/: command.cpp  command.h  config.cpp  config.h  daemon_call.cpp  daemon_call.h  env_options.cpp  env_options.h  io.cpp  io.h  multi_chunk.cpp  multi_chunk.h  out_stream.cpp  out_stream.h  rewritten_args.cpp  rewritten_args.h  task_quota.cpp  task_quota.h  utility.cpp  utility.h
distribuild/client/cxx/: compiler_args.cpp  compiler_args.h  compilition.cpp  compilition.h  main.cpp  rewrite_file.cpp  rewrite_file.h
distribuild/common/: console_logging.h  dir.cc  dir.h  encode.cpp  encode.h  file.cpp  file.h  io.cpp  io.h  logging.cc  logging.h  multi_chunk.cpp  multi_chunk.h  nocopy.h  out_stream.cpp  out_stream.h  spdlogging.h  string.cpp  string.h  token_verifier.cpp  token_verifier.h  tools.h  waiter.h  xxhash.h
distribuild/common/crypto/: aes.h  blake3.cpp  blake3.h  rsa.h  zstd.cpp  zstd.h
distribuild/daemon/: CMakeLists.txt  bloom_filter.h  cache.h  config.cpp  config.h  main.cpp  privilege.cpp  privilege.h  runtime.h  sysinfo.cpp  sysinfo.h  version.h
distribuild/daemon/cloud/: cache_writer.cpp  cache_writer.h  compilers.cpp  compilers.h  config.h  daemon_service_impl.cpp  daemon_service_impl.h  excute.cpp  excute.h  executor.cpp  executor.h  task.h  temp_dir.cpp  temp_dir.h  temp_file.cpp  temp_file.h
distribuild/daemon/cloud/compile_task/: cxx_task.cpp  cxx_task.h
distribuild/daemon/local/: cache_reader.cpp  cache_reader.h  config_keeper.cpp  config_keeper.h  dist_task.h  file_cache.cpp  file_cache.h  http_service_impl.cpp  http_service_impl.h  task_dispatcher.cpp  task_dispatcher.h  task_grant_keeper.cpp  task_grant_keeper.h  task_monitor.cpp  task_monitor.h  task_run_keeper.cpp  task_run_keeper.h
distribuild/daemon/local/dist_task/: cxx_task.cpp  cxx_task.h
distribuild/daemon/net/: server_group.cpp  server_group.h
distribuild/proto/: CMakeLists.txt  cache.proto  daemon.proto  env_desc.proto  env_info.proto  file_desc.proto  http_service.proto  patch.proto  scheduler.proto
distribuild/scheduler/: CMakeLists.txt  main.cpp  mian.cpp  running_task_bookkeeper.cpp  running_task_bookkeeper.h  scheduler_service_impl.cpp  scheduler_service_impl.h  task_dispatcher.cpp  task_dispatcher.h
doc/: client.md  cloud.md  daemon.md  local.md  proto.md  scheduler.md
tests/: co_tests.cc  common_test.cc
